[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/MainChar/Sign.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/InteractionPrompts/SignInteract.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/InteractionPrompts/InteractionPrompt.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 41.1155
height = 48.5666

[sub_resource type="CircleShape2D" id=2]
radius = 231.012

[node name="Sign" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.87646, 124.539 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 0, 0, 0.776471 )
position = Vector2( -25, 54 )
z_index = -1
shape = SubResource( 2 )

[node name="InteractionPrompt" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -172 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
